Se trabajo en rutas y controladores de comment y tag y swagger
