# src/routes/commentRouter.js
@@ -8,6 +8,10 @@ router.post('/', commentController.createComment);
 // Obtener comentarios visibles de un post
 router.get('/post/:postId', commentController.getComments);
 
+//Actualizar uncomentario
+
+router.update('/:id', commentController.updateComment);
+
 // Eliminar comentario
 router.delete('/:id', commentController.deleteComment);
 
